[package]
name = "unfuck"
version = "0.5.0"
edition = "2024"
description = "Python 2.7 bytecode deobfuscator"
license = "MIT"
repository = "https://github.com/landaire/unfuck"
readme = "README.md"
exclude = ['img/', 'test_data/']

[[bin]]
name = "unfuck"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
memmap = "0.7"
byteorder = "1.3"
py27-marshal = { version = "0.6" }
base64 = "0.13"
anyhow = "1.0"
thiserror = "1.0"
flate2 = "1.0"
pydis = "0.5"
num-bigint = "0.4"
num-integer = "0.1"
log = "0.4"
simplelog = "0.12"
simple_logger = "2.3"
num-traits = "0.2"
pretty-hex = "0.3"
petgraph = "0.6"
bitflags = "1.0"
once_cell = "1.5"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
stfu8 = "0.2"
num_cpus = "1.13.0"
crossbeam = "0.8"
rayon = "1.5"

[dev-dependencies]
py27-marshal = { version = "0.6" }
num-bigint = "0.4"
num-complex = "0.4"
pydis = "0.4"
insta = "1"

[features]
reduced_functionality = []

[patch.crates-io]
#py27-marshal = { path = "../py-marshal" }
#pydis = { path = "../pydis" }
